--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -61,7 +61,7 @@
                         <a href="#UserSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button">Generate report</a>
                         <ul class="collapse list-unstyled" id="UserSubmenu">
                                 <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'ibmlab' %}" target="blank">IBM Lab</a> </li>
-                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'wirelesslab' %}" target="blank">wireless Lab</a> </li>
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'wirelesslab' %}" target="blank">WIRELESS Lab</a> </li>
                                 <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'cclab' %}" target="blank">CC Lab</a> </li>
                                 <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'projectlab' %}" target="blank">PROJECT Lab</a> </li>
                                 <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'islab' %}" target="blank">IS Lab</a> </li>
