--- a/homepage/templates/updateitems.html
+++ b/homepage/templates/updateitems.html
@@ -71,6 +71,7 @@
       {% endfor %}
       <center>
         <div class="form-actions">
+          <input type="hidden" name="submit_with_errors" value="1">
           <input class="ghost-pink" type="submit" value="Update Item">
         </div>
      
